--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "random"
   ],
   "main": "./main.js",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "author": "gaurav-nelson",
   "scripts": {
     "start": "electron .",
@@ -19,8 +19,8 @@
     "wallpaper": "^4.4.2"
   },
   "devDependencies": {
-    "electron": "11.0.4",
-    "electron-builder": "^22.9.1"
+    "electron": "^11.0.4",
+    "electron-builder": "^22.14.5"
   },
   "build": {
     "appId": "io.unsplash-wallpaper.app",
